<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilgilendirme"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textSize="10dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="8dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birinciadim"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_margin="10dp"
        android:textSize="10dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birincibilgi"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="8dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ikinciciadim"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_margin="10dp"
        android:textSize="10dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ikincibilgi"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="8dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ucuncuadim"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_margin="10dp"
        android:textSize="10dp"
        android:fontFamily="@font/poppings"
        ></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dorduncuadim"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_margin="10dp"
        android:textSize="10dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dorduncubilgi"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textSize="8dp"
        android:fontFamily="@font/poppings"
        ></TextView>
    <Button
        android:id="@+id/btntamam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tamam"
        android:textColor="@color/white"
        android:fontFamily="@font/poppings"
        android:textSize="10dp"
        android:background="@color/colorPrimary"></Button>

</LinearLayout>
</ScrollView>