<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TozBoyaActivity">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/headerNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tozboya"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/poppings"
                android:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:src="@drawable/back" />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tozboyanedir"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tozboyantanim"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elektrostatik"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elektrostatiktanim"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verimlilik"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verimliliktanim"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cevredostu"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cevredostutanim"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/farklirenk"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/farklirenktanim"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dayaniklilik"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                ></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dayanikliliktanim"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                ></TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>