<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UrunBilgileriActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/headerNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urunBilgileri"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/poppings"
                android:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:src="@drawable/back" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHesaplama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageviewUrun"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                ></ImageView>
            <TextView
                android:id="@+id/txturunAdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                ></TextView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kendiparcaadi"
                android:singleLine="true"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="55dp"
            android:background="@color/black"
            ></View>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parcasayisi"
            android:singleLine="true"
            android:inputType="textCapCharacters"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <ImageView
        android:layout_margin="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/resimyukle"
        ></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boyutlar"
        android:textColor="@color/colorPrimary"
        android:layout_margin="5dp"></TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uzunluk"
            android:singleLine="true"
            android:inputType="textCapCharacters"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genislik"
            android:singleLine="true"
            android:inputType="textCapCharacters"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yukseklik"
            android:singleLine="true"
            android:inputType="textCapCharacters"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agirlik"
            android:singleLine="true"
            android:inputType="textCapCharacters"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/malzemekalinligi"
        android:textColor="@color/colorPrimary"
        android:layout_margin="5dp"></TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enbuyukmalzemekalinligi"
            android:singleLine="true"
            android:inputType="textCapCharacters"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/musterinotu"
            android:singleLine="true"
            android:inputType="textCapCharacters"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnfiyatihesapla"
        android:text="@string/fiyatihesapla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"></Button>
</LinearLayout>
</ScrollView>